# mandarin-coach

./: .dockerignore  .env.example  .gitignore  Caddyfile  DELIVERABLES.md  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  scratch_probe.py
.chainlit/: config.toml
app/: README.md  agent.py  config.py  main.py  memory.py  prompts.py  tools.py  users.py
app/.chainlit/: config.toml
app/public/: help.html  stylesheet.css
data/: README.md  build_hsk_vocab.py  error_patterns.json  grammar_patterns.json  grammar_rules.json  hsk_vocab.json  load_data.py
evals/: README.md  _env.py  agg_parse.py  eval_harness.py  generate_dataset.py  llm_judge.py  preflight_typec.py  ragas_rag.py  seed_data.py  test_dataset.json
evals/datagen/: build_retrieval_queries.py  extraction_dataset.json  generate_dataset.py  generate_extraction_dataset.py  retrieval_queries.json  seed_data.py  test_dataset.json
evals/lib/: _env.py  agg_parse.py  llm_judge.py
evals/results/: README.md  coverage_check.json  coverage_check.md  extraction.json  extraction.md  extraction_guarded.json  extraction_guarded.md  head_to_head.json  head_to_head.md  model_bakeoff.json  model_bakeoff.md  preflight_typec.md  ragas_agentic.json  ragas_agentic.md  ragas_rag.json  ragas_rag.md  retrieval_sweep.json  retrieval_sweep.md
evals/surfaces/: coverage_check.py  eval_harness.py  extraction_eval.py  model_bakeoff.py  preflight_typec.py  ragas_agentic.py  ragas_rag.py  retrieval_sweep.py
progress/: CHANGELOG.md  DECISIONS.md  STATUS.md  VIDEO_SCRIPT.md
public/: stylesheet.css  theme.json
tests/: test_extraction_guard.py
