[project]
name = "mandarin-coach"
version = "0.1.0"
description = "Personal Mandarin coaching agent — error-intelligence Agentic RAG for lower-intermediate learners"
requires-python = ">=3.11"
dependencies = [
    "chainlit",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-openai",
    "langchain-litellm",       # ChatLiteLLM wrapper so LLM calls are traced by LangSmith
    "chromadb",
    "litellm",
    "openai",
    "tavily-python",
    "requests",                # CC-CEDICT dictionary calls
    "ragas",
    "python-dotenv",
    "pypinyin>=0.55.0",
    "langgraph>=1.2.9",
    "rank-bm25",               # BM25 sparse retrieval for the hybrid grammar retriever (Task 6)
    "jieba",                   # CJK tokenisation so Chinese BM25 doesn't silently fail
]

[project.optional-dependencies]
# Eval-only heavy dependency for the Task 6 embedding sweep (BGE-M3 pulls in torch).
# Kept OUT of the default install and the production image. Install for the sweep with:
#   uv sync --extra task6
task6 = [
    "sentence-transformers",   # BGE-M3 local embeddings (Axis 1 candidate — NOT adopted in prod)
]

[tool.uv]
# Application project, not an installable package — uv just manages the venv.
package = false
